--- a/sick-fits/backend/prisma.yml
+++ b/sick-fits/backend/prisma.yml
@@ -1,2 +1,7 @@
-endpoint: https://us1.prisma.sh/jeremy-black/sick-fittts/dev
+endpoint: ${env:PRISMA_ENDPOINT}
 datamodel: datamodel.prisma
+#secret: ${env:PRISMA_SECRET}
+hooks:
+  post-deploy:
+    - graphql get-schema -p prisma
+
