auth Admin and begining permissions

--- a/sick-fits/backend/.vscode/settings.json
+++ b/sick-fits/backend/.vscode/settings.json
@@ -2,5 +2,17 @@
   "workbench.colorCustomizations": {
     "titleBar.activeBackground": "#FF2C70",
     "titleBar.inactiveBackground": "#FF2C70CC"
-  }
+  },
+  "cSpell.words": [
+    "Finalllllly",
+    "PERMISSIONUPDATE",
+    "Prisma",
+    "backend",
+    "deets",
+    "paren",
+    "signin",
+    "signout",
+    "signup",
+    "typeof"
+  ]
 }
