--- a/sick-fits/backend/package.json
+++ b/sick-fits/backend/package.json
@@ -9,29 +9,36 @@
     "deploy": "prisma deploy --env-file variables.env"
   },
   "dependencies": {
+    "ajv": "^6.5.5",
     "babel-preset-env": "^1.7.0",
     "bcryptjs": "2.4.3",
     "cookie-parser": "^1.4.3",
-    "dotenv": "6.0.0",
+    "dotenv": "^6.1.0",
     "eslint": "^5.8.0",
     "graphql": "^0.13.2",
-    "graphql-cli": "^2.16.7",
+    "graphql-cli": "^2.17.0",
     "graphql-yoga": "1.16.2",
     "jsonwebtoken": "8.3.0",
     "nodemailer": "^4.6.8",
-    "nodemon": "1.18.4",
-    "npm-run-all": "^4.1.3",
-    "prisma": "1.17.1",
+    "nodemon": "^1.18.7",
+    "npm-run-all": "^4.1.5",
+    "prisma": "^1.21.1",
     "prisma-binding": "2.1.6",
-    "stripe": "^6.12.1"
+    "stripe": "^6.12.1",
+    "tslint": "^5.11.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "typescript": "^3.1.6"
   },
   "license": "MIT",
   "repository": {
-    "url": "wesbos.com"
+    "url": "yodacom.com"
   },
   "babel": {
     "presets": [
       "env"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-babel": "^5.3.0"
   }
 }
