--- a/sick-fits/backend/package.json
+++ b/sick-fits/backend/package.json
@@ -14,19 +14,15 @@
     "bcryptjs": "2.4.3",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.1.0",
-    "eslint": "^5.8.0",
     "graphql": "^0.13.2",
     "graphql-cli": "^2.17.0",
     "graphql-yoga": "1.16.2",
     "jsonwebtoken": "8.3.0",
     "nodemailer": "^4.6.8",
-    "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
     "prisma": "^1.21.1",
     "prisma-binding": "2.1.6",
     "stripe": "^6.12.1",
-    "tslint": "^5.11.0",
-    "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.1.6"
   },
   "license": "MIT",
@@ -39,6 +35,10 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-babel": "^5.3.0"
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint": "^5.8.0",
+    "tslint": "^5.11.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "nodemon": "^1.18.7"
   }
 }
