--- a/sick-fits/frontend/package.json
+++ b/sick-fits/frontend/package.json
@@ -17,11 +17,14 @@
     "apollo-boost": "^0.1.22",
     "apollo-client": "^2.4.7",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
     "babel-plugin-styled-components": "^1.9.2",
     "date-fns": "^2.0.0-alpha.7",
     "downshift": "^2.2.3",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.7.0",
+    "eslint": "^5.10.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
     "lodash.debounce": "^4.0.8",
@@ -40,13 +43,21 @@
     "waait": "^1.0.2"
   },
   "devDependencies": {
+    "acorn": "^6.0.4",
+    "acorn-jsx": "^5.0.1",
     "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "casual": "^1.5.19",
     "enzyme-to-json": "^3.3.5",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "graphql-tools": "^4.0.0",
     "jest": "^23.6.0",
-    "jest-transform-graphql": "^2.1.0"
+    "jest-transform-graphql": "^2.1.0",
+    "prettier": "^1.15.3"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/jest.setup.js",
@@ -99,15 +110,6 @@
               "preset-env": {
                 "modules": "commonjs"
               }
-            }
-          ]
-        ],
-        "plugins": [
-          [
-            "styled-components",
-            {
-              "ssr": true,
-              "displayName": true
             }
           ]
         ]
